# wasm_vs_js

./: Cargo.toml  README.md  index.html
src/: lib.rs  script.js  style.css
