[package]
name = "wasm_vs_js"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
rust-version = "1.73.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    "ImageData",
    'Window',
]

